# ChessFlow

./: README.md
GM/: Cargo.toml
GM/src/: api.rs  game_logic.rs  main.rs
docs/: Patterns.md  Proompting.md  README.md  Standards.md
docs/prezentare_checkpoint2/: cod_LateX.tex
engine/: .gitignore  Cargo.toml  Makefile  README.md  run_profiling_session.sh  test_web_server.py  tracy.nix
engine/.cargo/: config.toml
engine/public/: engine.js  worker.js
engine/src/: chess_lib.rs  native_main.rs  wasm_main.rs
engine/src/chess_lib/: bitboard.rs  board.rs  engine.rs  evaluate.rs  game.rs  moves.rs  search.rs  simple_pst.rs  terminal_states.rs  uci_executor.rs  uci_parser.rs
engine/tests/: automated_response_tests.html  engine.html  interactive_UCI_communication.html  interactive_parse_test.html  multithreading_test.html  testpage.html
webClient/: .gitignore  shell.nix
webClient/ChessFlowSite.Server/: ChessFlowSite.Server.csproj  ChessFlowSite.Server.http  Program.cs  WeatherForecast.cs  appsettings.json  database.db
webClient/ChessFlowSite.Server/Controllers/: AccountController.cs  BansController.cs  GameController.cs  ReportsController.cs  WeatherForecastController.cs
webClient/ChessFlowSite.Server/Data/: ApplicationDbContext.cs
webClient/ChessFlowSite.Server/Hubs/: GameHub.cs
webClient/ChessFlowSite.Server/Migrations/: 20250504112449_InitialCreate.Designer.cs  20250504112449_InitialCreate.cs  20250504143137_RolesAndElo.Designer.cs  20250504143137_RolesAndElo.cs  20250506071926_Username.Designer.cs  20250506071926_Username.cs  20250506173038_DatabaseStructure.Designer.cs  20250506173038_DatabaseStructure.cs  20250506194211_fix.Designer.cs  20250506194211_fix.cs  20250507053825_AddDateToReport.Designer.cs  20250507053825_AddDateToReport.cs  20250531172932_fixGame.Designer.cs  20250531172932_fixGame.cs  ApplicationDbContextModelSnapshot.cs
webClient/ChessFlowSite.Server/Models/: ApplicationUser.cs  Ban.cs  Game.cs  Player.cs  Report.cs  SeedData.cs  (+1 more)
webClient/chessflowsite.client/: CHANGELOG.md  chessflowsite.client.esproj  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
(+41 files in other folders)
