[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = { version = "0.1.7" }

js-sys = { version = "0.3.77" }
web-sys = { version = "0.3.77", features = ["console"], default-features=false }

wasm-bindgen = { version = "0.2.100", default-features=false }
wasm-bindgen-futures = { version = "0.4.50" }
wasm-bindgen-spawn = { version = "0.0.1" }

console_log = { version = "1.0.0", features = ["color"] }
log = { version = "0.4.27" }

once_cell = { version = "1.21.3" }



[[bin]]
name = "native_engine"
path = "src/native_main.rs"

[lib]
name = "wasm_engine"
path = "src/wasm_main.rs"
crate-type = [ "cdylib" ]